--- a/assets/style.css
+++ b/assets/style.css
@@ -62,18 +62,16 @@ body {
 }
 
 .picture {
-	width: 30%;
+	flex-shrink: 0;
 	margin: 0 20px;
 	z-index: 0;
 }
-
 .picture img {
-	width: 100%;
-
+	width: 25em;
 }
-#about-me {
+/*#about-me {
 	width: 70%;
-}
+}*/
 .about-me__title {
 	margin-top: 1em;
 	margin-bottom: 60px;
@@ -128,6 +126,10 @@ body {
 	height: 100%;
 	object-fit: cover;
 	padding: .5em;
+}
+.lightboxImage {
+	max-width: 100%;
+	height: auto;
 }
 .mg-prev, .mg-next {
 	width: 30px;
@@ -248,12 +250,6 @@ input[type="submit"] {
 }
 
 @media all and (max-width: 1180px) {
-	.picture {
-		width: 50%;
-	}
-	.about-me {
-		width: 50%;
-	}
 	#about, #contact .container {
 		align-items: center;
 	}
@@ -270,8 +266,8 @@ input[type="submit"] {
 	#about{
 		flex-direction: column;
 	}
-	.picture {
-		width: 50%;
+	.picture img {
+		width: 15em;
 	}
 	.picture.left::before {
 		width: 100%;
@@ -354,8 +350,8 @@ input[type="submit"] {
 	form {
 		width: 100%;
 	}
-	.picture {
+/*	.picture {
 		width: 80%;
-	}
+	}*/
 }
 
