--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,6 @@ body {
 .top-header .name {
 	font-size: 26px;
 }
-
 .nav ul {
 	display: flex;
 	list-style-type: none;
@@ -39,6 +38,7 @@ body {
 }
 
 .social-link img {
+	height: 20px;
 	width: 20px;
 }
 
@@ -67,6 +67,7 @@ body {
 	z-index: 0;
 }
 .picture img {
+	height: 25em;
 	width: 25em;
 }
 /*#about-me {
@@ -267,6 +268,7 @@ input[type="submit"] {
 		flex-direction: column;
 	}
 	.picture img {
+		height: 15em;
 		width: 15em;
 	}
 	.picture.left::before {
